--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="css/main.css">
@@ -7,6 +7,7 @@
     </head>
     <body>
         Hello World
+        <script src="/socket.io/socket.io.js" charset="UTF-8"></script>
         <script src="js/chat.js"></script>
     </body>
 </html>
